src/components/ToolMenu/FeatureInfo/FeaturePropertyGrid/index.less
.feature-info-panel {
  .ant-tabs-content {
    height: 100%;

    .ant-tabs-tabpane {
      height: 100%;

      > div {
        height: 100%;

        .ant-table {
          height: 100%;

          .ant-table-title {
            display: flex;
            align-items: center;

            .copy {
              display: flex;
              button {
                margin-left: 5px;
              }
            }
          }

          .ant-table-body {
            overflow: auto !important;
          }

          .ant-table-container {
            height: 100%;
          }
        }
      }
    }
  }
}

